--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,13 @@
       <version>1.2</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjweaver</artifactId>
+      <version>1.9.19</version>
+
+    </dependency>
 
 
     <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
